fix content 1 & 3 image align

--- a/src/assets/scss/_vendor-helpers.scss
+++ b/src/assets/scss/_vendor-helpers.scss
@@ -218,6 +218,30 @@
   margin-left: 3 * 16px !important;
 }
 
+.m-auto {
+  margin: auto !important;
+}
+
+.mt-auto,
+.my-auto {
+  margin-top: auto !important;
+}
+
+.mr-auto,
+.mx-auto {
+  margin-right: auto !important;
+}
+
+.mb-auto,
+.my-auto {
+  margin-bottom: auto !important;
+}
+
+.ml-auto,
+.mx-auto {
+  margin-left: auto !important;
+}
+
 .p-0 {
   padding: 0 !important;
 }
